// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Section checkGrammar=false 1`] = `
<Div
  checkGrammar={false}
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section checkGrammar=true 1`] = `
<Div
  checkGrammar={true}
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section checkHighlight=false 1`] = `
<Div
  checkHighlight={false}
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section checkHighlight=true 1`] = `
<Div
  checkHighlight={true}
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section checkSpaces=false 1`] = `
<Div
  checkSpaces={false}
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section checkSpaces=true 1`] = `
<Div
  checkSpaces={true}
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section className="my-classname" 1`] = `
<Div
  className="uu5-bricks-section my-classname"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section className="test-classname" 1`] = `
<Div
  className="uu5-bricks-section test-classname"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="brown" 1`] = `
<Div
  className="color-schema-brown uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="brown-rich" 1`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="cyan" 1`] = `
<Div
  className="color-schema-cyan uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="cyan-rich" 1`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="default" 1`] = `
<Div
  className="color-schema-default uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="green" 1`] = `
<Div
  className="color-schema-green uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="green-rich" 1`] = `
<Div
  className="color-schema-green-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="grey" 1`] = `
<Div
  className="color-schema-grey uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="grey-rich" 1`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="orange" 1`] = `
<Div
  className="color-schema-orange uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="orange-rich" 1`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="pink" 1`] = `
<Div
  className="color-schema-pink uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="pink-rich" 1`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="purple" 1`] = `
<Div
  className="color-schema-purple uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="purple-rich" 1`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="red" 1`] = `
<Div
  className="color-schema-red uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="red-rich" 1`] = `
<Div
  className="color-schema-red-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="yellow" 1`] = `
<Div
  className="color-schema-yellow uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section colorSchema="yellow-rich" 1`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section content="This is Content from ContentMixin" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Div>
`;

exports[`UU5.Bricks.Section content=12345 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
>
  12345
</Div>
`;

exports[`UU5.Bricks.Section controlled=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section controlled=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section default props 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section disabled=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section disabled=false 3`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section disabled=true 1`] = `
<Div
  className="uu5-bricks-section"
  disabled={true}
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section disabled=true 3`] = `
<Div
  className="uu5-bricks-section"
  disabled={true}
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section docKit examples UU5.Bricks.Section should render without crash 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={2}
  mainAttrs={Object {}}
>
  <Header
    content="Infrastructure"
    id="uuID-header"
    key="uuID-header"
    underline={false}
  />
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="Robust and reliable hardware and software infrastructure, whether your own or in the cloud, is essential for the operation of information systems and all other application software equipment. Also of importance is the management of infrastructure security linked with to access of users to the company’s ICT environment and data. The fulfilment of the company’s business plan depends on choosing the right components for ICT infrastructure, deploying them quickly with optimum settings, and ensuring secure and continued operation. Unicorn has long-term experience with the delivery of ICT infrastructures and cloud services for the operation of information systems. Based on this experience, we are able to find and deliver optimum solutions both for new and existing customers. Our solutions have a great value to expense ratio. Because we are not dependent on any system vendor, we are always able to select the most suitable solution for each situation."
  />
  <Footer
    content="Author: www.unicorn.com"
    id="uuID-footer"
    key="uuID-footer"
  />
</Div>
`;

exports[`UU5.Bricks.Section dynamic=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section dynamic=true 1`] = `
<Div
  className="uu5-bricks-section"
  dynamic={true}
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
>
  <Footer
    content={
      <div>
        Footer of section
      </div>
    }
    id="uuID-footer"
    key="uuID-footer"
  />
</Div>
`;

exports[`UU5.Bricks.Section fullTextSearchPriority=0 1`] = `
<Div
  className="uu5-bricks-section uu-fulltextsearch-0"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section fullTextSearchPriority=0 2`] = `
<Div
  className="uu5-bricks-section uu-fulltextsearch-0"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
>
  <Header
    content={
      <div>
        Header of section
      </div>
    }
    id="uuID-header"
    key="uuID-header"
    underline={false}
  />
</Div>
`;

exports[`UU5.Bricks.Section hidden=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section hidden=false 3`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section hidden=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  hidden={true}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section hidden=true 3`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  hidden={true}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section id="myId" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="myId"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section id="test-id" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="test-id"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section ignoreHTML=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section ignoreHTML=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level="0" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level="0"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level="1" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level="1"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level="2" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level="2"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level="3" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level="3"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level="4" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level="4"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level="5" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level="5"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level="6" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level="6"
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level=0 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={0}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level=1 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={1}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level=2 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={2}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level=3 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={3}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level=4 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={4}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level=5 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={5}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section level=6 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={6}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section mainAttrs=undefined 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section name="myName" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  name="myName-inner"
/>
`;

exports[`UU5.Bricks.Section nestingLevel="bigBox" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.Section nestingLevel="bigBoxCollection" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Section nestingLevel="box" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Section nestingLevel="box" 3`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Section nestingLevel="boxCollection" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.Section nestingLevel="inline" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "inline",
        "pageBreakBefore": false,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "editationLazyLoaded": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Section",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Editace sekce",
          "en": "Section editation",
          "uk": "Редагування розділу",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  renderEditationMode={[Function]}
/>
`;

exports[`UU5.Bricks.Section nestingLevel="inline" 3`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "inline",
        "pageBreakBefore": false,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "editationLazyLoaded": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Section",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Editace sekce",
          "en": "Section editation",
          "uk": "Редагування розділу",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  renderEditationMode={[Function]}
/>
`;

exports[`UU5.Bricks.Section nestingLevel="page" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  nestingLevel="page"
/>
`;

exports[`UU5.Bricks.Section nestingLevel="smallBox" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "smallBox",
        "pageBreakBefore": false,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "editationLazyLoaded": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Section",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Editace sekce",
          "en": "Section editation",
          "uk": "Редагування розділу",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  renderEditationMode={[Function]}
/>
`;

exports[`UU5.Bricks.Section nestingLevel="smallBoxCollection" 1`] = `
<UU5.BricksEditable.InlineMode
  Component={[Function]}
  component={
    Object {
      "_isMounted": true,
      "_resizeCallbacks": Object {},
      "context": Object {},
      "id": "uuID",
      "mixinRegister": Array [
        "UU5.Common.BaseMixin",
        "UU5.Common.PureRenderMixin",
        "UU5.Common.ElementaryMixin",
        "UU5.Common.NestingLevelMixin",
        "UU5.Common.ContentMixin",
        "UU5.Common.LevelMixin",
        "UU5.Common.SectionMixin",
        "UU5.Common.ColorSchemaMixin",
        "UU5.Common.EditableMixin",
      ],
      "props": Object {
        "checkGrammar": undefined,
        "checkHighlight": undefined,
        "checkSpaces": undefined,
        "className": null,
        "colorSchema": null,
        "content": null,
        "controlled": true,
        "disabled": false,
        "dynamic": false,
        "footer": null,
        "fullTextSearchPriority": undefined,
        "getEditablePropValue": undefined,
        "header": null,
        "hidden": false,
        "id": "uuID",
        "ignoreInnerHTML": false,
        "increaseLevel": false,
        "level": null,
        "mainAttrs": null,
        "name": null,
        "nestingLevel": "smallBoxCollection",
        "pageBreakBefore": false,
        "parent": null,
        "pureRender": false,
        "ref_": null,
        "selected": false,
        "style": null,
        "textCorrector": undefined,
        "tooltip": null,
        "underline": false,
      },
      "refs": Object {},
      "renderedChildren": Array [],
      "renderedChildrenIdList": Object {},
      "renderedChildrenNameList": Object {},
      "renderedFooterChild": null,
      "renderedHeaderChild": null,
      "state": Object {
        "disabled": false,
        "editableComponentLazyLoaded": false,
        "editation": false,
        "editationLazyLoaded": false,
        "hidden": false,
        "level": 0,
        "mode": undefined,
        "nestingLevel": null,
        "selected": false,
      },
      "tagName": "UU5.Bricks.Section",
    }
  }
  editModalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Editace sekce",
          "en": "Section editation",
          "uk": "Редагування розділу",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  getPropsToSave={[Function]}
  linkTitle={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  modalHeader={
    <Lsi
      allowTags={Array []}
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id={null}
      ignoreInnerHTML={false}
      language={null}
      lsi={
        Object {
          "cs": "Sekce",
          "en": "Section",
          "uk": "Розділ",
        }
      }
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      params={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
  renderEditationMode={[Function]}
/>
`;

exports[`UU5.Bricks.Section nestingLevel="spa" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  nestingLevel="spa"
/>
`;

exports[`UU5.Bricks.Section noPrint=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section noPrint=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section pureRender=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section pureRender=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  pureRender={true}
/>
`;

exports[`UU5.Bricks.Section selected=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section selected=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  selected={true}
/>
`;

exports[`UU5.Bricks.Section style="padding:8px; borderRadius: 2px" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Section style={"backgroundColor":"red","color":"blue"} 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Section style={"margin":8} 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.Section textCorrector=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  textCorrector={false}
/>
`;

exports[`UU5.Bricks.Section textCorrector=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
  textCorrector={true}
/>
`;

exports[`UU5.Bricks.Section tooltip="My Tooltip" 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  tooltip="My Tooltip"
/>
`;

exports[`UU5.Bricks.Section underline=false 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;

exports[`UU5.Bricks.Section underline=true 1`] = `
<Div
  className="uu5-bricks-section"
  footer={null}
  header={null}
  id="uuID"
  level={null}
  mainAttrs={Object {}}
/>
`;
